--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="ms-3">
                     <a href="cart.html" class="btn btn-custom ms-3 position-relative">
                         <img src="images/cart.svg" alt="Cart Icon" style="width: 25px; height: 25px;">
-                        <span id="cart-badge" class="position-absolute top-0 start-100 translate-middle badge rounded-pill" style="font-size: 0.8rem; display: none;">0</span>
+                        <span id="cart-badge" class="cart-badge position-absolute top-0 start-100 translate-middle badge rounded-pill" style="font-size: 0.8rem; display: none;">0</span>
                     </a>
                 </div>
             </div>
@@ -66,7 +66,7 @@
     <main>
 
         <section class="hero">
-            <img src="images\pexels-quang-nguyen-vinh-222549-2131784.jpg" alt="" class="hero-image">
+            <img src="images/heroimage.jpg" alt="" class="hero-image">
             <h1>Sustainable Living Starts Here</h1>
             <p class="hero-para">Discover handmade, eco-friendly, and sustainable products for a better tomorrow.</p>
             <div class="hero-buttons">
