--- a/checkout.html
+++ b/checkout.html
@@ -13,19 +13,30 @@
     <!-- Navbar (same as other pages) -->
     <nav class="navbar navbar-expand-lg bg-white shadow-sm">
         <div class="container">
-            <a class="navbar-brand" href="index.html">
+            <!-- Logo -->
+            <a class="navbar-brand" href="#">
                 <img src="images/Screenshot 2024-12-16 181623.png" alt="terra-balance logo">
             </a>
+            <!-- Toggler for mobile -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <!-- Navbar Links -->
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="products.html">Shop</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link active nav-text" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link nav-text" href="products.html">Shop</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link nav-text" href="#">About</a>
+                    </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Categories</a>
+                        <a class="nav-link dropdown-toggle nav-text" href="#" role="button" data-bs-toggle="dropdown">
+                            Categories
+                        </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#">Cocoa</a></li>
                             <li><a class="dropdown-item" href="#">Plantains</a></li>
@@ -34,10 +45,19 @@
                         </ul>
                     </li>
                 </ul>
+                <!-- Search Form -->
                 <form class="d-flex ms-3" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search Products" aria-label="Search">
                     <button class="btn btn-outline-success btn-custom" type="submit">Search</button>
                 </form>
+    
+                <!-- Cart Icon -->
+                <div class="ms-3">
+                    <a href="cart.html" class="btn btn-custom ms-3 position-relative">
+                        <img src="images/cart.svg" alt="Cart Icon" style="width: 25px; height: 25px;">
+                        <span id="cart-badge" class="cart-badge position-absolute top-0 start-100 translate-middle badge rounded-pill" style="font-size: 0.8rem; display: none;">0</span>
+                    </a>
+                </div>
             </div>
         </div>
     </nav>
