--- a/index.html
+++ b/index.html
@@ -92,37 +92,37 @@
                 <div class="row farming-cards">
                     <div class="col-md-4 col-sm-6 mb-4">
                         <a href="#" class="farming-card">
-                            <img src="media\images\tomatoes.jpg" alt="Goat Farming">
+                            <img src="images/goat.jpg" alt="Goat Farming">
                             <h3>Goat Farming</h3>
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-6 mb-4">
                         <a href="#" class="farming-card">
-                            <img src="/static/images/chicken-farming.jpg" alt="Chicken Farming">
+                            <img src="images/chicken.jpg" alt="Chicken Farming">
                             <h3>Chicken Farming</h3>
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-6 mb-4">
                         <a href="#" class="farming-card">
-                            <img src="/static/images/corn-farming.jpg" alt="Corn Farming">
+                            <img src="images/corn.jpg" alt="Corn Farming">
                             <h3>Corn Farming</h3>
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-6 mb-4">
                         <a href="#" class="farming-card">
-                            <img src="/static/images/rice-farming.jpg" alt="Rice Farming">
+                            <img src="images/rice.jpg" alt="Rice Farming">
                             <h3>Rice Farming</h3>
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-6 mb-4">
                         <a href="#" class="farming-card">
-                            <img src="/static/images/vegetable-farming.jpg" alt="Vegetable Farming">
+                            <img src="images/vegetable.jpg" alt="Vegetable Farming">
                             <h3>Vegetable Farming</h3>
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-6 mb-4">
                         <a href="#" class="farming-card">
-                            <img src="/static/images/fruit-farming.jpg" alt="Fruit Farming">
+                            <img src="images/fruit.jpg" alt="Fruit Farming">
                             <h3>Fruit Farming</h3>
                         </a>
                     </div>
@@ -140,13 +140,13 @@
                     <div class="col-md-4 mb-4">
                         <div class="card featured-card">
                             <img 
-                                src="images/tomatoes.jpg" 
+                                src="images/plantain.jpg" 
                                 class="card-img-top" 
                                 alt=""
                             >
                             <div class="card-body text-center">
                                 <h5 class="card-title">Unripe Plantain</h5>
-                                <p class="card-price">45.89</p>
+                                <p class="card-price">$45.89</p>
                                 <a href="products.html" class="btn bt-sec">
                                     View More
                                 </a>
