--- a/payment.html
+++ b/payment.html
@@ -1,4 +1,3 @@
-<!-- Payment Page -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,47 +6,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payment | Terra Balance</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
+
 </head>
 <body>
     <!-- Navbar (same as other pages) -->
     <nav class="navbar navbar-expand-lg bg-white shadow-sm">
         <div class="container">
-            <a class="navbar-brand" href="index.html">
+            <!-- Logo -->
+            <a class="navbar-brand" href="#">
                 <img src="images/Screenshot 2024-12-16 181623.png" alt="terra-balance logo">
             </a>
+            <!-- Toggler for mobile -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <!-- Navbar Links -->
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active nav-text" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link nav-text" href="products.html">Shop</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link nav-text" href="#">About</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle nav-text" href="#" role="button" data-bs-toggle="dropdown">
+                            Categories
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Cocoa</a></li>
+                            <li><a class="dropdown-item" href="#">Plantains</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="#">Other Products</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <!-- Search Form -->
+                <form class="d-flex ms-3" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search Products" aria-label="Search">
+                    <button class="btn btn-outline-success btn-custom" type="submit">Search</button>
+                </form>
+    
+                <!-- Cart Icon -->
+                <div class="ms-3">
+                    <a href="cart.html" class="btn btn-custom ms-3 position-relative">
+                        <img src="images/cart.svg" alt="Cart Icon" style="width: 25px; height: 25px;">
+                        <span id="cart-badge" class="cart-badge position-absolute top-0 start-100 translate-middle badge rounded-pill" style="font-size: 0.8rem; display: none;">0</span>
+                    </a>
+                </div>
+            </div>
         </div>
     </nav>
 
-    <!-- Payment Page Content -->
-    <div class="container mt-5">
-        <h2>Payment Information</h2>
-        <form id="payment-form" class="mt-4">
-            <div class="mb-3">
-                <label for="card-name" class="form-label">Cardholder Name</label>
-                <input type="text" class="form-control" id="card-name" required>
-            </div>
-            <div class="mb-3">
-                <label for="card-number" class="form-label">Card Number</label>
-                <input type="text" class="form-control" id="card-number" required>
-            </div>
-            <div class="mb-3">
-                <label for="card-expiry" class="form-label">Expiry Date (MM/YY)</label>
-                <input type="text" class="form-control" id="card-expiry" required>
-            </div>
-            <div class="mb-3">
-                <label for="card-cvc" class="form-label">CVC</label>
-                <input type="text" class="form-control" id="card-cvc" required>
-            </div>
-            <div class="mt-4">
-                <button type="submit" class="btn btn-success">Complete Payment</button>
-            </div>
-        </form>
-    </div>
+    <!-- Payment Section -->
+    
 
     <!-- JS & Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/main.js"></script>
+
+    <script>
+        // Payment form submission handling
+        document.getElementById('payment-form').addEventListener('submit', function(event) {
+            event.preventDefault();
+            alert('Payment successful! Thank you for your purchase.');
+            localStorage.removeItem('cart'); // Clear cart after successful payment
+            window.location.href = 'confirmation.html';
+        });
+    </script>
 </body>
 </html>
