--- a/checkout.html
+++ b/checkout.html
@@ -144,6 +144,25 @@
             <a href="payment.html" class="btn btn-success mx-2">Proceed to payout</a>        
         </form>
     </div>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-logo">
+                <h2>Terra Balance</h2>
+            </div>
+            <div class="footer-links">
+                <a href="#">About Us</a>
+                <a href="#">Shop</a>
+                <a href="#">Contact</a>
+                <a href="#">Privacy Policy</a>
+            </div>
+            <div class="footer-socials">
+                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+            </div>
+            <p class="footer-text">&copy; 2025 Terra Balance. All rights reserved.</p>
+        </div>
+    </footer>
 
     <!-- JS & Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
